--- a/SCPCB Revival/Packages/manifest.json
+++ b/SCPCB Revival/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.ai.navigation": "2.0.5",
     "com.unity.feature.development": "1.0.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.high-definition": "17.0.3",
+    "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
