--- a/SCPCB Revival/Packages/manifest.json
+++ b/SCPCB Revival/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.0",
+    "com.unity.localization": "1.5.5",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.high-definition": "17.1.0",
     "com.unity.test-framework": "1.5.1",
